# LaMarzocco-Display

./: README.md  output.txt  platformio.ini
data/: credential.html  machine.html  main.html  status.html  styles.css
include/: activity_monitor.h  boiler_display.h  brewing_display.h  config.h  lamarzocco_auth.h  lamarzocco_client.h  lamarzocco_machine.h  lamarzocco_websocket.h  update_screen.h  water_alarm.h  web_handle.h
lib/src/: LV_Helper.cpp
src/: activity_monitor.cpp  boiler_display.cpp  brewing_display.cpp  custom_ui_event.cpp  lamarzocco_auth.cpp  lamarzocco_client.cpp  lamarzocco_machine.cpp  lamarzocco_websocket.cpp  main.cpp  update_screen.cpp  water_alarm.cpp  web.cpp  web_handler.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_NoConnectionScreen.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1794397354.c  ui_img_262687307.c  ui_img_battery0_png.c  ui_img_battery1_png.c  ui_img_battery2_png.c  ui_img_battery3_png.c  ui_img_battery_medium_icon_png.c  ui_img_batterymedium_png.c  ui_img_coffee_png.c  ui_img_cross_png.c  ui_img_drop_2_png.c  ui_img_logo_2_png.c  ui_img_nowifi_png.c  ui_img_power_png.c  ui_img_steam_png.c  ui_img_wifi0_png.c  ui_img_wifi1_png.c  ui_img_wifi2_png.c  ui_img_wifi3_png.c  ui_img_wifi_png.c  ui_img_wind_png.c  ui_img_x_circle_icon_png.c  ui_mainScreen.c  ui_setupWifiScreen.c  ui_welcomeScreen.c
